[package]
name = "app1"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
shuttle-axum = "0.52.0"
shuttle-runtime = "0.52.0"
tokio = { version = "1.28.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
regex = "1.5"

[[bin]]
name = "app1"
path = "main.rs"
